		7. Fix crash on OpenBSD 3.9 when MULTI_CHAR is enabled -
		   the variable morecur (defined as char) in screen.c is
		   treated as unsigned (WtF!).
		8. Fix compile error on OpenBSD 3.9 when MULTI_CHAR is
		   enabled (OpenBSD keeps playing game with us!).
		9. Saving session behavior now conforms to profile support.
		10. Apply patches from FreeBSD ports.

	* Enhancements:
		1. Enable multiple bold fonts. Thanks to Edgar Toernig for
		   the patch.

Gautam Iyer <gi1242@users.sourceforge.net>
	* Bug Fixes:
		1. Macros now ignore the state of caps lock (as they should).
		2. The highlight flag is now set even if the tabbar is hidden (so
		   showing the tabbar will show which tab produced the beep).
		3. Macros without modifiers did not work. Fixed this.
		4. Ignore SIGHUP (caused exit when parent shell is killed).
		5. Ignore SIGPIPE (caused exit when print command crashes).
		6. Some Xft fonts, e.g., aquafont, report double the actual width.
           This cause some text being clustered together while the cursor
           and user input have double size. Test, and correct for this.
           Notice that this fix will work for fontconfig 2.3.2 (as we have
           tested) or later version, and you must run ``fc-cache -f'' after
           upgrading fontconfig. It will not work for fontconfig 2.2.3 and
		   earlier versions due to the bug of fontconfig.
		7. Also dump initial tab titles when the --cmdInitTabs options are
		   given (this used to cause incorrect behaviour when the user closes
		   tab 0, and opens a new tab).
		8. Fixed bug #1473987. (Jagged edges of screen fonts)
		9. Fixed bug #1357219. (Made bg changes via escape sequences sticky)
	   10. Saved configuration file is now profile compliant.
	   11. Setting the tab title via \e]0 behaves like \e]2 (i.e. honors the
		   macros SET_TAB_TITLE_ON_XTERM_SEQUENCE & SET_TAB_TITLE_NOT_WIN_TITLE
		   defined in feature.h). Previously only \e]2 would honor these